testsuite/tests/typecheck/should_fail/T10495.hs
module T10495 where

class C a b where
  meth :: a -> b

foo = meth
