testsuite/tests/typecheck/should_fail/T10495.stderr
T10495.hs:6:7: error: [GHC-39999]
    • No instance for ‘C a0 b0’ arising from a use of ‘meth’
    • In the expression: meth
      In an equation for ‘foo’: foo = meth

